Update tcm settings

--- a/app-settings/wincmd.ini
+++ b/app-settings/wincmd.ini
@@ -3,10 +3,10 @@
 InstallDir=c:\totalcmd
 UseNewDefFont=1
 SetEncoding=дц.do.not.remove
-firstmnu=3705
+firstmnu=3193
 FirstTime=0
 FirstTimeIconLib=0
-test=148
+test=10
 onlyonce=1
 TrayIcon=0
 UseRightButton=1
@@ -41,7 +41,7 @@ DirTabOptions=829
 DirTabLimit=32
 ExplorerForCopy=0
 SamePartitions=CD
-Win95Delete=0
+Win95Delete=1
 UseTrash=1
 FirstTimeUnpack=0
 FirstTimeZIP=0
@@ -51,6 +51,16 @@ Aligned extension=1
 ShowCentury=1
 SizeStyle=6
 SizeFooter=9
+Viewer=C:\Windows\system32\notepad.exe "%1"
+Editor=""C:\Program Files\Sublime Text\sublime_text.exe" "%1""
+Viewertype=2
+LogOptions=7198
+LogRotateLimit=0
+LogKeepCount=30
+DirTabRevert=1
+DirTabFilters=1
+UseEverything=0
+LastSearchOptions=32
 [ButtonbarCache]
 IconDll_default.bar=
 IconDll_vertical.bar=
@@ -74,6 +84,7 @@ KeyButtons=1
 HistoryHotlistButtons=1
 BreadCrumbBar=1
 [left]
+path=c:\Users\v.kobrin\projects\Artifacts\datafeeds\
 ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -85,6 +96,7 @@ show=1
 sortorder=0
 negative Sortorder=0
 [right]
+path=c:\Users\v.kobrin\ConEmu\Data\settings\
 ViewMode=10001
 activepanelcolor=-1
 activepanelcolor2=-1
@@ -140,6 +152,16 @@ DividerQuickView=500
 DividerComments=500
 Tabstops=228,231,285,177,629,100
 monitor(0,0,1920,1080;96)=811,147,1100,800
+CmdSelX=1037
+CmdSelY=356
+CmdSelDX=653
+CmdSelDY=371
+CmdSelMax=0
+SearchX=689
+SearchY=407
+SearchDX=585
+SearchDY=266
+SearchMax=0
 [Tabstops]
 0=243
 1=246
@@ -150,4 +172,3 @@ monitor(0,0,1920,1080;96)=811,147,1100,800
 AdjustWidth=1
 [1920x1080 (10x20)]
 Tabstops=243,246,300,192,688,100
-
