--- a/configs/docker-compose.yaml
+++ b/configs/docker-compose.yaml
@@ -5,6 +5,18 @@ networks:
 
 services:
 
+  # MySQL
+  mysql:
+    image: mysql:8.0.31
+    volumes: 
+      - ./data/mysql:/var/lib/mysql
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: root 
+
+
+
   # Sonarqube example
   java-code-analyzer:
     image: openjdk:11
@@ -46,7 +58,7 @@ services:
 
 
 
-  # Elasticsearch claster example
+  # Elasticsearch cluster example
   elasticsearch1:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.6.2
     environment:
