--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -9,7 +8,8 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-  - http:
+  - host: localhos
+    http:
       paths:
       - path: /pay
         pathType: Prefix
