--- a/k8s/cronjob.yaml
+++ b/k8s/cronjob.yaml
@@ -8,6 +8,7 @@ spec:
     spec:
       completions: 3
       parallelism: 3
+      activeDeadlineSeconds: 60
       template:
         spec:
           containers:
