--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -31,6 +31,7 @@ spec:
         resources:
           requests:
             cpu: "0.2"
+            memtory: "200Mi"
       volumes:
       - name: logs
         emptyDir: {}
