Add script to transcribe videos using Whisper on MacOS

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ test
 scripts/formatted_tickets.txt
 scripts/result.txt
 .DS_Store
+
+scripts/transcribe/*
+!scripts/transcribe/
+!scripts/transcribe/transcribe.sh
