--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ scripts/result.txt
 scripts/transcribe/*
 !scripts/transcribe/
 !scripts/transcribe/transcribe.sh
+
+scripts/domria/downloads/
+
+**/.env
